Agregar texto en strings.xml

--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -64,7 +64,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Repetir contraseña"
+        android:text="@string/repetir_contrasena_crear_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.242"
@@ -89,7 +89,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Contraseña"
+        android:text="@string/contrasena_crear_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.209"
@@ -101,7 +101,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre completo"
+        android:text="@string/nombre_completo_crear_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.241"
@@ -113,7 +113,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correo electrónico"
+        android:text="@string/correo_electronico_crear_cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.244"
@@ -129,7 +129,7 @@
         android:background="#EDEAEA"
         android:backgroundTint="#F4F4F4"
         android:backgroundTintMode="add"
-        android:text="Button"
+        android:text="@string/btn_crear_cuenta"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -139,10 +139,10 @@
         app:layout_constraintVertical_bias="0.797" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/txtIniciaSesion"
         android:layout_width="269dp"
         android:layout_height="33dp"
-        android:text="¿Ya tienes una cuenta? inicia sesión"
+        android:text="@string/txt_inicia_sesion_crear_cuenta"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="16sp"
