--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -24,7 +24,7 @@
         android:layout_width="269dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Nombre completo"
+        android:hint="@string/nombre_completo_crear_cuenta"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="269dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Correo electrónico"
+        android:hint="@string/correo_electronico_crear_cuenta"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,7 +51,7 @@
         android:layout_width="269dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Contraseña"
+        android:hint="@string/contrasena_crear_cuenta"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
         android:layout_width="269dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Repetir contraseña"
+        android:hint="@string/repetir_contrasena_crear_cuenta"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -124,19 +124,19 @@
     <Button
         android:id="@+id/btnCrearCuenta"
         style="@style/Widget.Material3.Button.ElevatedButton.Icon"
-        android:layout_width="269dp"
-        android:layout_height="54dp"
+        android:layout_width="249dp"
+        android:layout_height="42dp"
         android:background="#EDEAEA"
         android:backgroundTint="#F4F4F4"
         android:backgroundTintMode="add"
         android:text="@string/btn_crear_cuenta"
-        android:textSize="24sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
+        app:layout_constraintVertical_bias="0.786" />
 
     <TextView
         android:id="@+id/txtIniciaSesion"
@@ -148,9 +148,9 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.887" />
+        app:layout_constraintVertical_bias="0.873" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
