Agregar icono de tijeras

--- a/app/src/main/res/layout/activity_configuracion_de_cuenta.xml
+++ b/app/src/main/res/layout/activity_configuracion_de_cuenta.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8D2D2"
+    android:background="#FFCDD2"
     tools:context=".configuracionDeCuenta">
 
     <Button
@@ -25,15 +25,15 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="196dp"
+        android:layout_height="128dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/whatsapp_image_2022_04_23_at_6_39_43_pm" />
 
     <EditText
         android:id="@+id/idNombreCompletoCrearCuenta2"
@@ -143,7 +143,7 @@
         android:layout_width="269dp"
         android:layout_height="54dp"
         android:background="#EDEAEA"
-        android:backgroundTint="#F4F4F4"
+        android:backgroundTint="#EDEAEA"
         android:backgroundTintMode="add"
         android:text="@string/btn_guardar_datos_configuracion_de_cuenta"
         android:textSize="24sp"
