--- a/app/src/main/res/layout/activity_agendar_cita.xml
+++ b/app/src/main/res/layout/activity_agendar_cita.xml
@@ -10,10 +10,12 @@
     tools:context=".AgendarCita"
     android:background="#FFCDD2">
 
+
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:layout_gravity="center"
         tools:srcCompat="@drawable/dd193b18_789a_4a81_8690_7ede6f2f7dbe_removebg_preview__1_" />
     <TextView
@@ -25,14 +27,6 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_paciente"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -40,18 +34,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtNombre"
             android:background="#FFCDD2"
+            android:hint="@string/cita_paciente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_sucursal"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -59,18 +46,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtSucursal"
             android:background="#FFCDD2"
+            android:hint="@string/cita_sucursal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_estilista"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -78,18 +58,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEstilista"
             android:background="#FFCDD2"
+            android:hint="@string/cita_estilista"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_fecha"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -97,18 +70,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtFecha"
             android:background="#FFCDD2"
+            android:hint="@string/cita_fecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_hora"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -116,20 +82,26 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtHora"
             android:background="#FFCDD2"
+            android:hint="@string/cita_hora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/btnAgregar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
+
         android:text="Guardar"
         android:textColor="#646464" />
+
     <Button
-        android:text="Cancelar"
-        android:backgroundTint="@color/white"
-        android:textColor="#646464"
+        android:id="@+id/btnCancelar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:text="Cancelar"
+        android:textColor="#646464" />
+
 </LinearLayout>
