--- a/app/src/main/res/layout/activity_agendar_cita.xml
+++ b/app/src/main/res/layout/activity_agendar_cita.xml
@@ -26,17 +26,7 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtNombre"
-            android:background="#FFCDD2"
-            android:hint="@string/cita_paciente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -45,6 +35,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtSucursal"
             android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:textColorHint="#646464"
             android:hint="@string/cita_sucursal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -57,7 +49,23 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEstilista"
             android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:textColorHint="#646464"
             android:hint="@string/cita_estilista"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtMotivo"
+            android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:textColorHint="#646464"
+            android:hint="@string/cita_motivo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -69,6 +77,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtFecha"
             android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:textColorHint="#646464"
             android:hint="@string/cita_fecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -81,6 +91,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtHora"
             android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:textColorHint="#646464"
             android:hint="@string/cita_hora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
