--- a/app/src/main/res/layout/activity_ver_cita.xml
+++ b/app/src/main/res/layout/activity_ver_cita.xml
@@ -26,25 +26,7 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="@string/cita_paciente"
-        android:textColor="#646464"
-        android:textSize="12sp"
-        android:textStyle="bold" />
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edtNombre"
-            android:enabled="false"
-            android:background="#FFCDD2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,6 +44,7 @@
             android:id="@+id/edtSucursal"
             android:enabled="false"
             android:background="#FFCDD2"
+            android:textColor="#646464"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -82,6 +65,28 @@
             android:id="@+id/edtEstilista"
             android:enabled="false"
             android:background="#FFCDD2"
+            android:textColor="#646464"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:text="@string/cita_motivo"
+        android:textColor="#646464"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edtMotivo"
+            android:enabled="false"
+            android:background="#FFCDD2"
+            android:textColor="#646464"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -102,6 +107,7 @@
             android:id="@+id/edtFecha"
             android:enabled="false"
             android:background="#FFCDD2"
+            android:textColor="#646464"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -122,6 +128,7 @@
             android:id="@+id/edtHora"
             android:enabled="false"
             android:background="#FFCDD2"
+            android:textColor="#646464"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
