historial de citas

--- a/app/src/main/res/layout/activity_cita_layout.xml
+++ b/app/src/main/res/layout/activity_cita_layout.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/tvNombre"
+        android:id="@+id/tvMotivo"
         android:layout_margin="5dp"
         android:textSize="18sp"
         android:textColor="#646464"
