--- a/app/src/main/res/layout/activity_vista_inicio.xml
+++ b/app/src/main/res/layout/activity_vista_inicio.xml
@@ -26,9 +26,9 @@
                 android:id="@+id/textViewNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/inicio_saludo"
                 android:textAlignment="center"
-                android:textSize="30sp"
-                android:text="hola usuario"/>
+                android:textSize="30sp" />
 
             <ImageView
                 android:layout_width="match_parent"
