--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="color_principal">#F8D2D2</color>
+    <color name="snow">#FEF5FA</color>
+    <color name="primario">#FFCDD2</color>
+    <color name="secundario">#646464</color>
+    <color name="terciario">#EEEEEE</color>
+    <color name="texto">#333</color>
+    <color name="card">#F5F5F6</color>
 </resources>
