--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CatedraDSM" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.CatedraDSM" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,17 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+    <style name="linear_layout_vertical">
+        <item name="android:layout_margin">20dp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="boton">
+        <item name="cornerRadius">20dp</item>
+    </style>
+    <style name="boton_inicio" parent="boton">
+        <item name="android:layout_margin">10dp</item>
     </style>
 </resources>
